[package]
name = "texest"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
clap = { version = "4.4.1", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
once_cell = "1.18.0"
regex = "1.10.2"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.25"
similar = { version = "2.4.0", features = ["bytes"] }
tokio = { version = "1.32.0", features = ["process", "time", "full"] }
yash-quote = "1.1.1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
pretty_assertions = "1.4.0"
rstest = "0.18.2"
