[package]
name = "texest"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
clap = { version = "4.4.1", features = ["derive"] }
duration-str = "0.7.1"
futures = "0.3.30"
indexmap = { version = "2.1.0", features = ["serde"] }
nix = { version = "0.27.1", features = ["signal"] }
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["native-tls-vendored"] }
saphyr = "0.0.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"
similar = { version = "2.4.0", features = ["bytes"] }
tempfile = "3.9.0"
tokio = { version = "1.32.0", features = ["process", "time", "full"] }
yash-quote = "1.1.1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
coverage-helper = "0.2.2"
httptest = "0.15.5"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
